# Diablo IV Collection Log

A web app that allows Diablo IV players keep track of their Transmog
collections.

## [1.8.2] - 2024-09-12

### Added

- Universal collection that lists every item by type

### Fixed

- Missing "Father's Blasphemy" mount armor icons
- Added "Premium" tag to all shop items

### Updated

- "Challenges" icon in the drop menu

## [1.8.1] - 2024-09-04

### Added

- Season 5 challenges rewards
- Season 5 shop additions

### Fixed

- Icon not swapping gender for shop icons

## [1.8.0] - 2024-08-14

### Added

- Season of the Internal Hordes collection
- Season 5 uniques and mythics
- Ability to switch the class and gender of icons for items with variations
- Show Debug Info switch under options
- "The Hunger" weapon cosmetics to Tejal's Gifts
- "Gauntlet" trophy collection under essential / activity

### Updated

- Appearance of unobtainable items (similar to excluded)
- "Orichalcum Defender" to Tejals / Returning Champion collection
- Moved "Decorated Skull" to the Season Journey #4 collection
- Moved "Kris" to the Season Journey #2 collection
- Moved "Morningstar" to the Quest collection
- Moved "Kard" to the Question collection
- Moved "Doom Hammer" to the Season Journey #5 collection
- Moved "Tome" focus item to the Season Journey #5 collection
- Updated various item descriptions for readability and accuracy
- Replaced "Prophetic Urn" with "Keepsake" (focus)
- Replaced "Sinner's Skull" with "Augur" (focus)
- Replaced "Death Charm" with "Trophy Tusk" (focus)
- Replaced "Tecpatl" with "Stiletto" (dagger)
- Moved "1st Year Anniversary" and "Dark Gifts" collections to Tejal's Gifts
- Adjust typography of list view

### Fixes

- Significantly reduced the size of the database
- Reduced screen shift when lazy loading item icons
- Refreshed database, fixing icons and item names such as "Exceptional Gloves"

## [1.7.2] - 2024-08-01

### Updated

- Mark respective Feats of Strength as "out of rotation"
- Updated presentation of excluded items